Fix search icon size on mobile and unreliable tooltip behavior

--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -386,7 +386,6 @@ img {
     [title] {
         position: relative;
         z-index: 10;
-        display: inline-flex;
         justify-content: center;
     }
     [title]:focus::after {
